--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,10 @@
 
 
 <body id="body">
+	<!-- Back to top button -->
+	<a id="buttonScrollToTop"></a>
+
+
 	<div class="dividers">
 		<div class="divider"></div>
 		<div class="divider"></div>
